[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-recovery-learning"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[tool.setuptools.packages.find]
include = ["reliability_learning*"]

[tool.pytest.ini_options]
addopts = "-W error"
testpaths = ["tests"]
