[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-learning-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139,<0.140",
    "pwdlib[argon2]>=0.3,<0.4",
    "pyjwt>=2.13,<3",
    "pydantic-settings>=2.14,<2.15",
    "python-multipart>=0.0.20,<1",
    "uvicorn>=0.51,<0.52",
]

[project.optional-dependencies]
test = ["httpx2>=2.7,<3", "pytest>=9,<10"]

[tool.setuptools.packages.find]
include = ["secure_api*"]

[tool.pytest.ini_options]
addopts = "-W error"
testpaths = ["tests"]
