[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-task-api"
version = "0.1.0"
description = "FastAPI dependencies, settings, validation, and modular routers example"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139,<0.140",
    "pydantic-settings>=2.14,<2.15",
    "uvicorn>=0.51,<0.52",
]

[project.optional-dependencies]
test = [
    "httpx2>=2.7,<3",
    "pytest>=9,<10",
]

[tool.setuptools.packages.find]
include = ["modular_api*"]

[tool.pytest.ini_options]
addopts = "-W error"
testpaths = ["tests"]
