[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-task-api"
version = "0.1.0"
description = "First FastAPI application with lifespan, validation, and error responses"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139,<0.140",
    "uvicorn>=0.51,<0.52",
]

[project.optional-dependencies]
test = ["httpx2>=2.7,<3"]

[tool.setuptools]
packages = ["learning_api"]
