[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-backend-first-program"
version = "0.1.0"
description = "A dependency-free Python CLI used by the backend learning site"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["learning_backend*"]
