[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typed-task-catalog-example"
version = "0.1.0"
description = "Runnable example for Python typing, generics, narrowing, and tests"
requires-python = ">=3.11"

[project.optional-dependencies]
typecheck = ["mypy>=1.10,<2"]

[tool.setuptools]
packages = ["typed_tasks"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["typed_tasks"]
